    - jessie* has been partially archived/removed.
    - Add buster-backports.
    - Add bullseye-proposed-updates.
  * piuparts.conf:
    - Add section [sid-merged-usr], using --merged-usr.  (Closes: #848968)
  * piupartslib/packagesdb.py:
    - Keep recycled pass logs while waiting for new test results, continuing
      to show them as "successfully-tested" instead of "waiting-to-be-tested".
  * piuparts-slave.py:
    - New option "slave-flush-interval" to flush logs more frequently to the
      master. Set to 30 minutes.
    - New option "chroot-meta-directory" to share reference target chroot
      metadata between slave instances.
  * scripts/{post_chroot_unpack,pre_distupgrade}_allow_unauthenticated:
    - Disable Check-Valid-Until for wheezy/updates and jessie-backports.
  * scripts/post_distupgrade_exceptions:
    - Handle /var/lib/pam/seen stretch -> buster upgrade by running
      pam-auth-update if needed. Workaround for #920760.
  * scripts/pre_remove_40_find_unowned_lib_links:
    - Handle --merged-usr environments.
  * master-bin/reschedule_piuparts_tests: Do not act on 'bugged/*.log' and
    'affected/*.log' by default. Add --bugged, --affected flags.

  [ Holger Levsen ]
  * htdocs/news.tpl: add news about sid-merged-usr being tested.
  * piuparts_slave_join.8.txt: update revdate to date of last change.

 -- Holger Levsen <holger@debian.org>  Fri, 01 Mar 2019 11:47:19 +0100

piuparts (0.98) unstable; urgency=medium

  [ Holger Levsen ]
  * piuparts-reports.py: add link to states graph for each suite.
  * instances/piuparts.conf-template.pejacevic: increase sid-nodoc's
    precedence.
  * Refactor reschedule_piuparts_tests to use new global configuration
    variable 'testing-suite'.
  * generate_daily_report: show failures in sid, $TESTING and testing2sid
    at the top of the report.
  * master-bin/prepare_backup: ignore empty submissions.txt for $TESTING-pu
    and $TESTING-security.
  * Update TODO for bullseye.

  [ Andreas Beckmann ]